<resources>
    <string name="app_name">firebase</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="btn_register">btn_register</string>
    <string name="ProgressBar">ProgressBar</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="btn_login">btn_login</string>
    <string name="logout">logout</string>
</resources>